// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generators babel transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-current-umd 1`] = `
[
  "umd/index-browser-current-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.gen = gen;
  _exports.runGen = runGen;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd

  function* gen() {}
  function runGen() {
    for (const iterator of gen()) {
      console.log(iterator);
    }
  }
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.gen = gen;
  _exports.runGen = runGen;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd

  function* gen() {}
  function runGen() {
    for (const iterator of gen()) {
      console.log(iterator);
    }
  }
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== "undefined" && o[Symbol.iterator] || o["@@iterator"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === "number") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }
function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === "string") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === "Object" && o.constructor) n = o.constructor.name; if (n === "Map" || n === "Set") return Array.from(o); if (n === "Arguments" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }
function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) arr2[i] = arr[i]; return arr2; }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

function* gen() {}
function runGen() {
  var _iterator = _createForOfIteratorHelper(gen()),
    _step;
  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== "undefined" && o[Symbol.iterator] || o["@@iterator"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === "number") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }
function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === "string") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === "Object" && o.constructor) n = o.constructor.name; if (n === "Map" || n === "Set") return Array.from(o); if (n === "Arguments" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }
function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) arr2[i] = arr[i]; return arr2; }
function* gen() {}
function runGen() {
  var _iterator = _createForOfIteratorHelper(gen()),
    _step;
  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.gen = gen;
  _exports.runGen = runGen;
  function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== "undefined" && o[Symbol.iterator] || o["@@iterator"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === "number") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }
  function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === "string") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === "Object" && o.constructor) n = o.constructor.name; if (n === "Map" || n === "Set") return Array.from(o); if (n === "Arguments" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }
  function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) arr2[i] = arr[i]; return arr2; }
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd

  function* gen() {}
  function runGen() {
    var _iterator = _createForOfIteratorHelper(gen()),
      _step;
    try {
      for (_iterator.s(); !(_step = _iterator.n()).done;) {
        var iterator = _step.value;
        console.log(iterator);
      }
    } catch (err) {
      _iterator.e(err);
    } finally {
      _iterator.f();
    }
  }
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: browser-stable-umd 1`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.gen = gen;
  _exports.runGen = runGen;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  function* gen() {}
  function runGen() {
    for (const iterator of gen()) {
      console.log(iterator);
    }
  }
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Generators babel transforms example test case: electron-current-esm 1`] = `
[
  "esm/index-electron-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-current-esm.js.map
",
]
`;

exports[`Generators babel transforms example test case: electron-current-lib 1`] = `
[
  "lib/index-electron-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-current-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: electron-experimental-esm 1`] = `
[
  "esm/index-electron-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-experimental-esm.js.map
",
]
`;

exports[`Generators babel transforms example test case: electron-experimental-lib 1`] = `
[
  "lib/index-electron-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-experimental-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: electron-legacy-esm 1`] = `
[
  "esm/index-electron-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-legacy-esm.js.map
",
]
`;

exports[`Generators babel transforms example test case: electron-legacy-lib 1`] = `
[
  "lib/index-electron-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-legacy-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: electron-stable-esm 1`] = `
[
  "esm/index-electron-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-stable-esm.js.map
",
]
`;

exports[`Generators babel transforms example test case: electron-stable-lib 1`] = `
[
  "lib/index-electron-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-stable-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { gen, runGen } = data;",
]
`;

exports[`Generators babel transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Generators babel transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Generators babel transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { gen, runGen } = data;",
]
`;

exports[`Generators babel transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Generators babel transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Generators babel transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { gen, runGen } = data;",
]
`;

exports[`Generators babel transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Generators babel transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Generators babel transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { gen, runGen } = data;",
]
`;

exports[`Generators babel transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Generators babel transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Generators babel transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;

exports[`Generators swc transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-current-umd 1`] = `
[
  "umd/index-browser-current-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        gen: ()=>gen,
        runGen: ()=>runGen
    });
    function* gen() {}
    function runGen() {
        for (const iterator of gen())console.log(iterator);
    }
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        gen: ()=>gen,
        runGen: ()=>runGen
    });
    function* gen() {}
    function runGen() {
        for (const iterator of gen())console.log(iterator);
    }
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var __generator = this && this.__generator || function(thisArg, body) {
    var f, y, t, g, _ = {
        label: 0,
        sent: function() {
            if (t[0] & 1) throw t[1];
            return t[1];
        },
        trys: [],
        ops: []
    };
    return g = {
        next: verb(0),
        "throw": verb(1),
        "return": verb(2)
    }, typeof Symbol === "function" && (g[Symbol.iterator] = function() {
        return this;
    }), g;
    function verb(n) {
        return function(v) {
            return step([
                n,
                v
            ]);
        };
    }
    function step(op) {
        if (f) throw new TypeError("Generator is already executing.");
        while(_)try {
            if (f = 1, y && (t = op[0] & 2 ? y["return"] : op[0] ? y["throw"] || ((t = y["return"]) && t.call(y), 0) : y.next) && !(t = t.call(y, op[1])).done) return t;
            if (y = 0, t) op = [
                op[0] & 2,
                t.value
            ];
            switch(op[0]){
                case 0:
                case 1:
                    t = op;
                    break;
                case 4:
                    _.label++;
                    return {
                        value: op[1],
                        done: false
                    };
                case 5:
                    _.label++;
                    y = op[1];
                    op = [
                        0
                    ];
                    continue;
                case 7:
                    op = _.ops.pop();
                    _.trys.pop();
                    continue;
                default:
                    if (!(t = _.trys, t = t.length > 0 && t[t.length - 1]) && (op[0] === 6 || op[0] === 2)) {
                        _ = 0;
                        continue;
                    }
                    if (op[0] === 3 && (!t || op[1] > t[0] && op[1] < t[3])) {
                        _.label = op[1];
                        break;
                    }
                    if (op[0] === 6 && _.label < t[1]) {
                        _.label = t[1];
                        t = op;
                        break;
                    }
                    if (t && _.label < t[2]) {
                        _.label = t[2];
                        _.ops.push(op);
                        break;
                    }
                    if (t[2]) _.ops.pop();
                    _.trys.pop();
                    continue;
            }
            op = body.call(thisArg, _);
        } catch (e) {
            op = [
                6,
                e
            ];
            y = 0;
        } finally{
            f = t = 0;
        }
        if (op[0] & 5) throw op[1];
        return {
            value: op[0] ? op[1] : void 0,
            done: true
        };
    }
};
function gen() {
    return __generator(this, function(_state) {
        return [
            2
        ];
    });
}
function runGen() {
    var _iteratorNormalCompletion = true, _didIteratorError = false, _iteratorError = undefined;
    try {
        for(var _iterator = gen()[Symbol.iterator](), _step; !(_iteratorNormalCompletion = (_step = _iterator.next()).done); _iteratorNormalCompletion = true){
            var iterator = _step.value;
            console.log(iterator);
        }
    } catch (err) {
        _didIteratorError = true;
        _iteratorError = err;
    } finally{
        try {
            if (!_iteratorNormalCompletion && _iterator.return != null) {
                _iterator.return();
            }
        } finally{
            if (_didIteratorError) {
                throw _iteratorError;
            }
        }
    }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';
var __generator = (void 0) && (void 0).__generator || function(thisArg, body) {
    var f, y, t, g, _ = {
        label: 0,
        sent: function() {
            if (t[0] & 1) throw t[1];
            return t[1];
        },
        trys: [],
        ops: []
    };
    return g = {
        next: verb(0),
        "throw": verb(1),
        "return": verb(2)
    }, typeof Symbol === "function" && (g[Symbol.iterator] = function() {
        return this;
    }), g;
    function verb(n) {
        return function(v) {
            return step([
                n,
                v
            ]);
        };
    }
    function step(op) {
        if (f) throw new TypeError("Generator is already executing.");
        while(_)try {
            if (f = 1, y && (t = op[0] & 2 ? y["return"] : op[0] ? y["throw"] || ((t = y["return"]) && t.call(y), 0) : y.next) && !(t = t.call(y, op[1])).done) return t;
            if (y = 0, t) op = [
                op[0] & 2,
                t.value
            ];
            switch(op[0]){
                case 0:
                case 1:
                    t = op;
                    break;
                case 4:
                    _.label++;
                    return {
                        value: op[1],
                        done: false
                    };
                case 5:
                    _.label++;
                    y = op[1];
                    op = [
                        0
                    ];
                    continue;
                case 7:
                    op = _.ops.pop();
                    _.trys.pop();
                    continue;
                default:
                    if (!(t = _.trys, t = t.length > 0 && t[t.length - 1]) && (op[0] === 6 || op[0] === 2)) {
                        _ = 0;
                        continue;
                    }
                    if (op[0] === 3 && (!t || op[1] > t[0] && op[1] < t[3])) {
                        _.label = op[1];
                        break;
                    }
                    if (op[0] === 6 && _.label < t[1]) {
                        _.label = t[1];
                        t = op;
                        break;
                    }
                    if (t && _.label < t[2]) {
                        _.label = t[2];
                        _.ops.push(op);
                        break;
                    }
                    if (t[2]) _.ops.pop();
                    _.trys.pop();
                    continue;
            }
            op = body.call(thisArg, _);
        } catch (e) {
            op = [
                6,
                e
            ];
            y = 0;
        } finally{
            f = t = 0;
        }
        if (op[0] & 5) throw op[1];
        return {
            value: op[0] ? op[1] : void 0,
            done: true
        };
    }
};
function gen() {
    return __generator(this, function(_state) {
        return [
            2
        ];
    });
}
function runGen() {
    var _iteratorNormalCompletion = true, _didIteratorError = false, _iteratorError = undefined;
    try {
        for(var _iterator = gen()[Symbol.iterator](), _step; !(_iteratorNormalCompletion = (_step = _iterator.next()).done); _iteratorNormalCompletion = true){
            var iterator = _step.value;
            console.log(iterator);
        }
    } catch (err) {
        _didIteratorError = true;
        _iteratorError = err;
    } finally{
        try {
            if (!_iteratorNormalCompletion && _iterator.return != null) {
                _iterator.return();
            }
        } finally{
            if (_didIteratorError) {
                throw _iteratorError;
            }
        }
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        gen: function() {
            return gen;
        },
        runGen: function() {
            return runGen;
        }
    });
    var __generator = (void 0) && (void 0).__generator || function(thisArg, body) {
        var f, y, t, g, _ = {
            label: 0,
            sent: function() {
                if (t[0] & 1) throw t[1];
                return t[1];
            },
            trys: [],
            ops: []
        };
        return g = {
            next: verb(0),
            "throw": verb(1),
            "return": verb(2)
        }, typeof Symbol === "function" && (g[Symbol.iterator] = function() {
            return this;
        }), g;
        function verb(n) {
            return function(v) {
                return step([
                    n,
                    v
                ]);
            };
        }
        function step(op) {
            if (f) throw new TypeError("Generator is already executing.");
            while(_)try {
                if (f = 1, y && (t = op[0] & 2 ? y["return"] : op[0] ? y["throw"] || ((t = y["return"]) && t.call(y), 0) : y.next) && !(t = t.call(y, op[1])).done) return t;
                if (y = 0, t) op = [
                    op[0] & 2,
                    t.value
                ];
                switch(op[0]){
                    case 0:
                    case 1:
                        t = op;
                        break;
                    case 4:
                        _.label++;
                        return {
                            value: op[1],
                            done: false
                        };
                    case 5:
                        _.label++;
                        y = op[1];
                        op = [
                            0
                        ];
                        continue;
                    case 7:
                        op = _.ops.pop();
                        _.trys.pop();
                        continue;
                    default:
                        if (!(t = _.trys, t = t.length > 0 && t[t.length - 1]) && (op[0] === 6 || op[0] === 2)) {
                            _ = 0;
                            continue;
                        }
                        if (op[0] === 3 && (!t || op[1] > t[0] && op[1] < t[3])) {
                            _.label = op[1];
                            break;
                        }
                        if (op[0] === 6 && _.label < t[1]) {
                            _.label = t[1];
                            t = op;
                            break;
                        }
                        if (t && _.label < t[2]) {
                            _.label = t[2];
                            _.ops.push(op);
                            break;
                        }
                        if (t[2]) _.ops.pop();
                        _.trys.pop();
                        continue;
                }
                op = body.call(thisArg, _);
            } catch (e) {
                op = [
                    6,
                    e
                ];
                y = 0;
            } finally{
                f = t = 0;
            }
            if (op[0] & 5) throw op[1];
            return {
                value: op[0] ? op[1] : void 0,
                done: true
            };
        }
    };
    function gen() {
        return __generator(this, function(_state) {
            return [
                2
            ];
        });
    }
    function runGen() {
        var _iteratorNormalCompletion = true, _didIteratorError = false, _iteratorError = undefined;
        try {
            for(var _iterator = gen()[Symbol.iterator](), _step; !(_iteratorNormalCompletion = (_step = _iterator.next()).done); _iteratorNormalCompletion = true){
                var iterator = _step.value;
                console.log(iterator);
            }
        } catch (err) {
            _didIteratorError = true;
            _iteratorError = err;
        } finally{
            try {
                if (!_iteratorNormalCompletion && _iterator.return != null) {
                    _iterator.return();
                }
            } finally{
                if (_didIteratorError) {
                    throw _iteratorError;
                }
            }
        }
    }
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: browser-stable-umd 1`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        gen: ()=>gen,
        runGen: ()=>runGen
    });
    function* gen() {}
    function runGen() {
        for (const iterator of gen())console.log(iterator);
    }
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Generators swc transforms example test case: electron-current-esm 1`] = `
[
  "esm/index-electron-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-electron-current-esm.js.map
",
]
`;

exports[`Generators swc transforms example test case: electron-current-lib 1`] = `
[
  "lib/index-electron-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-current-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: electron-experimental-esm 1`] = `
[
  "esm/index-electron-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-electron-experimental-esm.js.map
",
]
`;

exports[`Generators swc transforms example test case: electron-experimental-lib 1`] = `
[
  "lib/index-electron-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-experimental-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: electron-legacy-esm 1`] = `
[
  "esm/index-electron-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-electron-legacy-esm.js.map
",
]
`;

exports[`Generators swc transforms example test case: electron-legacy-lib 1`] = `
[
  "lib/index-electron-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-legacy-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: electron-stable-esm 1`] = `
[
  "esm/index-electron-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-electron-stable-esm.js.map
",
]
`;

exports[`Generators swc transforms example test case: electron-stable-lib 1`] = `
[
  "lib/index-electron-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-stable-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { gen, runGen } = data;",
]
`;

exports[`Generators swc transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Generators swc transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Generators swc transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { gen, runGen } = data;",
]
`;

exports[`Generators swc transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Generators swc transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Generators swc transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { gen, runGen } = data;",
]
`;

exports[`Generators swc transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Generators swc transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Generators swc transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { gen, runGen } = data;",
]
`;

exports[`Generators swc transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Generators swc transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Generators swc transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
function* gen() {}
function runGen() {
    for (const iterator of gen())console.log(iterator);
}
export { gen, runGen };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;
